Fix NOTAM alignment bug on mobile devices

--- a/src/Pages/Index.cshtml.css
+++ b/src/Pages/Index.cshtml.css
@@ -65,12 +65,14 @@ p {
     display: table-cell;
     text-align: left;
     width: 70px;
+    min-width: 70px;
 }
 
 .report-line span {
     display: table-cell;
     text-align: left;
     vertical-align: top;
+    word-break: break-all;
 }
 
 @media print {
